--- a/lang/es.json
+++ b/lang/es.json
@@ -32,5 +32,7 @@
     "All rights reserved.": "Todos los derechos reservados.",
 
     "description": "descripción",
-    "Descripcion": "Descripción"
+    "Descripcion": "Descripción",
+    "Add media": "Agregar imagen",
+    "Save": "Guardar"
 }
