feature: modulo almacen

--- a/lang/es.json
+++ b/lang/es.json
@@ -34,5 +34,7 @@
     "description": "descripción",
     "Descripcion": "Descripción",
     "Add media": "Agregar imagen",
-    "Save": "Guardar"
+    "Save": "Guardar",
+    "ubicacion": "ubicación",
+    "Ubicacion": "Ubicación"
 }
